--- a/examples/NativeFormWidgets/index.html
+++ b/examples/NativeFormWidgets/index.html
@@ -10,6 +10,8 @@
   <body>
     <div id="app"></div>
 
+    <script src="../../react.js"></script>
+    <script src="../../react-form-with-constraints.js"></script>
     <script src="App.js"></script>
   </body>
 </html>
