--- a/examples/moduscreate/index.html
+++ b/examples/moduscreate/index.html
@@ -12,6 +12,8 @@
   <body>
     <div id="app"></div>
 
+    <script src="../../react.js"></script>
+    <script src="../../react-form-with-constraints.js"></script>
     <script src="App.js"></script>
   </body>
 </html>
