Full rewrite to allow for elements between FieldFeedbacks and FieldFeedback
No more use of React.Children and React.cloneElement()
+ tons of other things

--- a/examples/HTML5Constraints/index.html
+++ b/examples/HTML5Constraints/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example password</title>
+    <title>Example HTML5Contraints</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Password/style.css">
   </head>
 
   <body>
@@ -14,7 +14,6 @@
 
     <script src="../../manifest.js"></script>
     <script src="../../react.js"></script>
-    <script src="../../react-form-with-constraints.js"></script>
     <script src="App.js"></script>
   </body>
 </html>
