--- a/examples/NoFramework/index.html
+++ b/examples/NoFramework/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example HttpStatusCode</title>
+    <title>Example NoFramework</title>
 
     <link rel="stylesheet" href="../Password/style.css">
   </head>
@@ -14,7 +14,6 @@
 
     <script src="../../manifest.js"></script>
     <script src="../../react.js"></script>
-    <script src="../../react-form-with-constraints.js"></script>
     <script src="App.js"></script>
   </body>
 </html>
