--- a/examples/Password/index.html
+++ b/examples/Password/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example HttpStatusCode</title>
+    <title>Example Password</title>
 
-    <link rel="stylesheet" href="../Password/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
