--- a/examples/PasswordNoState/index.html
+++ b/examples/PasswordNoState/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example HttpStatusCode</title>
+    <title>Example PasswordNoState</title>
 
     <link rel="stylesheet" href="../Password/style.css">
   </head>
