--- a/examples/Bootstrap4/index.html
+++ b/examples/Bootstrap4/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example moduscreate</title>
+    <title>Example Bootstrap4</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
   </head>
