Fix examples style.css

--- a/examples/HttpStatusCode/index.html
+++ b/examples/HttpStatusCode/index.html
@@ -6,7 +6,7 @@
 
     <title>Example HttpStatusCode</title>
 
-    <link rel="stylesheet" href="../Password/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
