--- a/examples/HTML5Constraints/index.html
+++ b/examples/HTML5Constraints/index.html
@@ -6,7 +6,7 @@
 
     <title>Example HTML5Contraints</title>
 
-    <link rel="stylesheet" href="../Password/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
