Async support + other improvements

--- a/examples/SignUp/index.html
+++ b/examples/SignUp/index.html
@@ -7,6 +7,7 @@
     <title>Example SignUp</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="spinner.css">
   </head>
 
   <body>
