Rework the examples for CodeSandbox
FYI CodeSandbox needs react-scripts

--- a/examples/Bootstrap4/index.html
+++ b/examples/Bootstrap4/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example Bootstrap4</title>
-
-    <link rel="stylesheet" href="App.css">
+    <title>react-form-with-constraints Bootstrap 4 example</title>
   </head>
 
   <body>
