--- a/examples/MaterialUI/index.html
+++ b/examples/MaterialUI/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example Bootstrap4</title>
+    <title>react-form-with-constraints Material-UI example</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
