--- a/examples/SignUp/index.html
+++ b/examples/SignUp/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example SignUp</title>
-
-    <link rel="stylesheet" href="style.css">
+    <title>SignUp example</title>
   </head>
 
   <body>
