--- a/examples/ClubMembers/index.html
+++ b/examples/ClubMembers/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example ClubMembers</title>
+    <title>react-form-with-constraints ClubMembers example</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
