--- a/examples/HTML5ConstraintValidationAPI/index.html
+++ b/examples/HTML5ConstraintValidationAPI/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Example PasswordNoState</title>
-
-    <link rel="stylesheet" href="style.css">
+    <title>React with HTML5 constraint validation API example</title>
   </head>
 
   <body>
