--- a/examples/Bootstrap/index.html
+++ b/examples/Bootstrap/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>react-form-with-constraints Bootstrap 4 example</title>
+    <title>react-form-with-constraints Bootstrap example</title>
   </head>
 
   <body>
