Switch ClubMembers example to Bootstrap 5

--- a/examples/ClubMembers/index.html
+++ b/examples/ClubMembers/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.css"
     />
   </head>
 
